# threasure-net

./: .gitignore  Makefile  README.org  pyproject.toml
hydra/: main.yaml
hydra/callbacks/: classif.yaml  default.yaml
hydra/datamodule/: sits.yaml  sits_dev.yaml
hydra/experiment/: sits_rdb_pe_tq_10m.yaml  sits_rdb_shuffle_pe_tq_2_5m.yaml  sits_rdb_shuffle_pe_tq_5m.yaml  sits_rdb_shuffle_pe_tq_no_ang_5m.yaml
hydra/experiment/ablation/: sits_rdb_shuffle_pe_tq_reg_all_mae.yaml  sits_rdb_shuffle_pe_tq_reg_all_pmae.yaml
hydra/location/: trex.yaml
hydra/log_dir/: default.yaml
hydra/loggers/: default.yaml
hydra/losses/: mae.yaml  mae_classif_branch.yaml  mae_gdl.yaml  mae_gdl_fft.yaml  mae_wgdl.yaml  mse.yaml  pmae_wgdl.yaml  pmae_wgdl_classif_branch.yaml  rmse.yaml
hydra/metrics/: default.yaml  default_freq.yaml  default_freq_classif_branch.yaml  rmse.yaml
hydra/model/: sits.yaml  sits_rdb_interpolate_pe_tq.yaml  sits_rdb_shuffle_pe_tq_classif.yaml  sits_rdb_sr10to5.yaml  sits_unet_interpolate_pe_tq.yaml
hydra/standardization_metrics/: default.yaml  trex.yaml
hydra/trainer/: default.yaml
hydra/training_module/: default.yaml  sits.yaml
src/deep_tree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deep_tree/callbacks/: fft.py  show_results_sits.py  show_results_sits_classif.py  show_results_sits_fft.py
src/deep_tree/datamodules/: datamodule_sits.py  dataset_sits.py  datatypes.py  prepare_sample.py
src/deep_tree/models/: datatypes.py
src/deep_tree/models/carn_model/: carn_3x3x64g4sw_bootstrap_small.yaml
src/deep_tree/models/components/: decay_scheduler.py  loss.py  utils.py
src/deep_tree/models/lightning/: training_sits.py  training_sits_cl_reg.py
src/deep_tree/models/torch/: RDB.py  deeptree_sits.py  mlp.py  spatio_spectral_encoder.py  sr_10to5.py  temporal_encoder.py  temporal_encoder_tq.py  unet_baseline.py  upsample.py
src/deep_tree/tests/: loss_test.py  patch_crop_test.py  sits_dataset_test.py  sits_model_test.py  types_test.py
